add aug-cc-pV5Z basis sets for Li, Be, Na, Mg, also edit the tiles for aug-cc-pVXZ (X=D, T, Q) basis sets of Li, Be, Na, Mg

--- a/lib/basis/aug-cc-pvdz.kv
+++ b/lib/basis/aug-cc-pvdz.kv
@@ -73,7 +73,7 @@ basis:(
    })
  ]
 %
-% BASIS SET: (10s,5p,2d) -> [4s,3p,2d]
+% BASIS SET: (9s,4p,1d) -> [3s,2p,1d]
 % AUGMENTING FUNCTIONS: Diffuse (1s,1p,1d)
  lithium:"aug-cc-pVDZ": [
   (type: [am = S]
@@ -124,7 +124,8 @@ basis:(
                   7.330000000000e-02               1.000000000000e+00})
 ]
 %
-% BASIS SET: (10s,5p,2d) -> [4s,3p,2d]
+% BASIS SET: (9s,4p,1d) -> [3s,2p,1d]
+% AUGMENTING FUNCTIONS: Diffuse (1s,1p,1d)
  beryllium:"aug-cc-pVDZ": [
   (type: [am = S]
     {exp coef:0} = {
@@ -450,7 +451,7 @@ basis:(
    })
  ]
 %
-% BASIS SET: (13s,9p,2d) -> [5s,4p,2d]
+% BASIS SET: (12s,(6+2)p,1d) -> [4s,3p,1d]
 % AUGMENTING FUNCTIONS: Diffuse (1s,1p,1d)
  sodium:"aug-cc-pVDZ": [
   (type: [am = S]
@@ -535,7 +536,7 @@ basis:(
                   4.800000000000e-02               1.000000000000e+00})
 ]
 %
-% BASIS SET: (13s,9p,2d) -> [5s,4p,2d]
+% BASIS SET: (12s,(6+2)p,1d) -> [4s,3p,1d]
 % AUGMENTING FUNCTIONS: Diffuse (1s,1p,1d)
  magnesium:"aug-cc-pVDZ": [
   (type: [am = S]
