--- a/lib/basis/aug-cc-pvqz.kv
+++ b/lib/basis/aug-cc-pvqz.kv
@@ -146,7 +146,7 @@ basis:(
    })
  ]
 %
-% BASIS SET: (13s,7p,4d,3f,2g) -> [6s,5p,4d,3f,2g]
+% BASIS SET: (12s,6p,3d,2f,1g) -> [5s,4p,3d,2f,1g]
 % AUGMENTING FUNCTIONS: Diffuse (1s,1p,1d,1f,1g)
 lithium:"aug-cc-pVQZ": [
   (type: [am = S]
@@ -238,7 +238,8 @@ lithium:"aug-cc-pVQZ": [
                   1.041000000000e-01               1.000000000000e+00})
 ]
 %
-% BASIS SET: (13s,7p,4d,3f,2g) -> [6s,5p,4d,3f,2g]
+% BASIS SET: (12s,6p,3d,2f,1g) -> [5s,4p,3d,2f,1g]
+% AUGMENTING FUNCTIONS: Diffuse (1s,1p,1d,1f,1g)
  beryllium:"aug-cc-pVQZ": [
   (type: [am = S]
     {exp coef:0} = {
@@ -875,7 +876,7 @@ lithium:"aug-cc-pVQZ": [
    })
  ]
 %
-% BASIS SET: (20s,13p,4d,3f,2g) -> [7s,6p,4d,3f,2g]
+% BASIS SET: (19s,(8+4)p,3d,2f,1g) -> [6s,5p,3d,2f,1g]
 % AUGMENTING FUNCTIONS: Diffuse (1s,1p,1d,1f,1g)
  sodium:"aug-cc-pVQZ": [
   (type: [am = S]
@@ -1022,7 +1023,7 @@ lithium:"aug-cc-pVQZ": [
                   8.720000000000e-02               1.000000000000e+00})
 ]
 %
-% BASIS SET: (17s,13p,4d,3f,2g) -> [7s,6p,4d,3f,2g]
+% BASIS SET: (19s,(8+4)p,3d,2f,1g) -> [6s,5p,3d,2f,1g]
 % AUGMENTING FUNCTIONS: Diffuse (1s,1p,1d,1f,1g)
  magnesium:"aug-cc-pVQZ": [
   (type: [am = S]
