--- a/lib/basis/aug-cc-pvtz.kv
+++ b/lib/basis/aug-cc-pvtz.kv
@@ -106,7 +106,7 @@ basis:(
    })
  ]
 %
-% BASIS SET: (12s,6p,3d,2f) -> [5s,4p,3d,2f]
+% BASIS SET: (11s,5p,2d,1f) -> [4s,3p,2d,1f]
 % AUGMENTING FUNCTIONS: Diffuse (1s,1p,1d,1f)
 lithium:"aug-cc-pVTZ": [
   (type: [am = S]
@@ -177,8 +177,8 @@ lithium:"aug-cc-pVTZ": [
                   8.120000000000e-02               1.000000000000e+00})
 ]
 %
-%
-% BASIS SET: (12s,6p,3d,2f) -> [5s,4p,3d,2f]
+% BASIS SET: (11s,5p,2d,1f) -> [4s,3p,2d,1f]
+% AUGMENTING FUNCTIONS: Diffuse (1s,1p,1d,1f)
  beryllium:"aug-cc-pVTZ": [
   (type: [am = S]
     {exp coef:0} = {
@@ -644,7 +644,7 @@ lithium:"aug-cc-pVTZ": [
    })
  ]
 %
-% BASIS SET: (17s,11p,3d,2f) -> [6s,5p,3d,2f]
+% BASIS SET: (16s,(7+3)p,2d,1f) -> [5s,4p,2d,1f]
 % AUGMENTING FUNCTIONS: Diffuse (1s,1p,1d,1f)
 sodium:"aug-cc-pVTZ": [
   (type: [am = S]
@@ -760,7 +760,7 @@ sodium:"aug-cc-pVTZ": [
                   7.000000000000e-02               1.000000000000e+00})
 ]
 %
-% BASIS SET: (16s,11p,3d,2f) -> [6s,5p,3d,2f]
+% BASIS SET: (15s,(7+3)p,2d,1f) -> [5s,4p,2d,1f]
 % AUGMENTING FUNCTIONS: Diffuse (1s,1p,1d,1f)
  magnesium:"aug-cc-pVTZ": [
   (type: [am = S]
