Added the 6-311G** basis for iodine.

--- a/lib/basis/6-311gSS.kv
+++ b/lib/basis/6-311gSS.kv
@@ -1560,4 +1560,90 @@ basis:(
            0.39500000      1.00000000
    })
  ]
+%
+% BASIS SET: (15s,12p,6d) -> [10s,9p,4d]
+ iodine:"6-311G**": [
+  (type: [am = S]
+    {exp coef:0} = {
+                  4.447500000000e+05               8.900000000000e-04
+                  6.612700000000e+04               6.940000000000e-03
+                  1.481500000000e+04               3.609000000000e-02
+                  4.144900000000e+03               1.356800000000e-01
+                  1.361200000000e+03               3.387800000000e-01})
+  (type: [am = S]
+    {exp coef:0} = {
+                  5.084400000000e+02               4.365900000000e-01
+                  2.095900000000e+02               1.837500000000e-01})
+  (type: [am = S]
+    {exp coef:0} = {
+                  8.195900000000e+01               1.000000000000e+00})
+  (type: [am = S]
+    {exp coef:0} = {
+                  3.680500000000e+01               1.000000000000e+00})
+  (type: [am = S]
+    {exp coef:0} = {
+                  1.349500000000e+01               1.000000000000e+00})
+  (type: [am = S]
+    {exp coef:0} = {
+                  6.885900000000e+00               1.000000000000e+00})
+  (type: [am = S]
+    {exp coef:0} = {
+                  2.552000000000e+00               1.000000000000e+00})
+  (type: [am = S]
+    {exp coef:0} = {
+                  1.208800000000e+00               1.000000000000e+00})
+  (type: [am = S]
+    {exp coef:0} = {
+                  2.734000000000e-01               1.000000000000e+00})
+  (type: [am = S]
+    {exp coef:0} = {
+                  1.009000000000e-01               1.000000000000e+00})
+  (type: [am = P]
+    {exp coef:0} = {
+                  2.953600000000e+03               1.221000000000e-02
+                  7.126100000000e+02               8.587000000000e-02
+                  2.367100000000e+02               2.949300000000e-01
+                  9.263100000000e+01               4.784900000000e-01})
+  (type: [am = P]
+    {exp coef:0} = {
+                  3.973200000000e+01               1.000000000000e+00})
+  (type: [am = P]
+    {exp coef:0} = {
+                  1.727300000000e+01               1.000000000000e+00})
+  (type: [am = P]
+    {exp coef:0} = {
+                  7.957000000000e+00               1.000000000000e+00})
+  (type: [am = P]
+    {exp coef:0} = {
+                  3.152900000000e+00               1.000000000000e+00})
+  (type: [am = P]
+    {exp coef:0} = {
+                  1.332800000000e+00               1.000000000000e+00})
+  (type: [am = P]
+    {exp coef:0} = {
+                  4.947000000000e-01               1.000000000000e+00})
+  (type: [am = P]
+    {exp coef:0} = {
+                  2.160000000000e-01               1.000000000000e+00})
+  (type: [am = P]
+    {exp coef:0} = {
+                  8.293000000000e-02               1.000000000000e+00})
+  (type: [(am = D puream = 1)]
+    {exp coef:0} = {
+                  2.619500000000e+02               3.144000000000e-02
+                  7.673400000000e+01               1.902800000000e-01
+                  2.755100000000e+01               4.724700000000e-01})
+  (type: [(am = D puream = 1)]
+    {exp coef:0} = {
+                  1.060600000000e+01               1.000000000000e+00})
+  (type: [(am = D puream = 1)]
+    {exp coef:0} = {
+                  3.421700000000e+00               1.000000000000e+00})
+  (type: [(am = D puream = 1)]
+    {exp coef:0} = {
+                  1.137000000000e+00               1.000000000000e+00})
+  (type: [(am = D puream = 1)]
+    {exp coef:0} = {
+                  3.020000000000e-01               1.000000000000e+00})
+ ]
 )
