--- a/src/lib/chemistry/qc/wfn/wfntest.kv
+++ b/src/lib/chemistry/qc/wfn/wfntest.kv
@@ -44,6 +44,17 @@ pwavefunction<HCoreWfn>: (
 coor = $:symcoor
 message = $:message1
 
+soadwfn<SuperpositionOfAtomicDensities>: (
+
+  molecule = $:molecule
+  basis<GaussianBasisSet>: (
+    molecule = $..:molecule
+    name = "cc-pVDZ"
+    puream = yes
+  )
+  
+)
+
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %
