--- a/lib/basis/wtbs.kv
+++ b/lib/basis/wtbs.kv
@@ -71,7 +71,7 @@ basis:lithium:"WTBS": [
                   1.748313900000e-02              -1.182689220000e-01})
 ]
 
-basis:berillium:"WTBS": [
+basis:beryllium:"WTBS": [
   (type: [am = S]
     {exp coef:0} = {
                   7.919264900000e+05               5.481403440000e-07
